--- a/Fighting game thing/Fighting game thingy.cbp
+++ b/Fighting game thing/Fighting game thingy.cbp
@@ -50,6 +50,7 @@
 			<Add library="sfml-audio" />
 			<Add library="sfml-window" />
 			<Add library="sfml-system" />
+			<Add library="sfml-network" />
 			<Add directory="D:/SFML-2.6.1-windows-gcc-13.1.0-mingw-64-bit/SFML-2.6.1/lib" />
 		</Linker>
 		<Unit filename="main.cpp" />
