--- a/Fighting game thing/Fighting game thingy.cbp
+++ b/Fighting game thing/Fighting game thingy.cbp
@@ -4,30 +4,29 @@
 	<Project>
 		<Option title="Fighting game engine" />
 		<Option pch_mode="2" />
-		<Option compiler="gcc" />
+		<Option compiler="copy_of_gnu_gcc_compiler" />
 		<Build>
 			<Target title="Debug">
 				<Option output="bin/Debug/Fighting game thingy" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="0" />
-				<Option compiler="gcc" />
+				<Option compiler="copy_of_gnu_gcc_compiler" />
 				<Compiler>
 					<Add option="-g" />
-					<Add directory="D:/SFML-2.6.1-windows-gcc-13.1.0-mingw-64-bit/SFML-2.6.1/include" />
 				</Compiler>
 				<Linker>
-					<Add library="sfml-graphics-s-d" />
-					<Add library="sfml-audio-s-d" />
-					<Add library="sfml-window-s-d" />
-					<Add library="sfml-system-s-d" />
-					<Add directory="D:/SFML-2.6.1-windows-gcc-13.1.0-mingw-64-bit/SFML-2.6.1/lib" />
+					<Add library="sfml-graphics-d" />
+					<Add library="sfml-audio-d" />
+					<Add library="sfml-window-d" />
+					<Add library="sfml-system-d" />
+					<Add library="sfml-network-d" />
 				</Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/Fighting game thingy" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="0" />
-				<Option compiler="gcc" />
+				<Option compiler="copy_of_gnu_gcc_compiler" />
 				<Compiler>
 					<Add option="-O2" />
 				</Compiler>
@@ -41,7 +40,7 @@
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
-			<Add directory="D:/SFML-2.6.1-windows-gcc-13.1.0-mingw-64-bit/SFML-2.6.1/include" />
+			<Add directory="D:/SFML-3.0.0/include" />
 		</Compiler>
 		<Linker>
 			<Add option="-static-libgcc" />
@@ -51,7 +50,7 @@
 			<Add library="sfml-window" />
 			<Add library="sfml-system" />
 			<Add library="sfml-network" />
-			<Add directory="D:/SFML-2.6.1-windows-gcc-13.1.0-mingw-64-bit/SFML-2.6.1/lib" />
+			<Add directory="D:/SFML-3.0.0/lib" />
 		</Linker>
 		<Unit filename="main.cpp" />
 		<Extensions>
