--- a/Fighting game thing/Fighting game thingy.cbp
+++ b/Fighting game thing/Fighting game thingy.cbp
@@ -26,8 +26,8 @@
 					<Add library="sfml-graphics-d" />
 					<Add library="sfml-audio-d" />
 					<Add library="sfml-window-d" />
-					<Add library="sfml-system-d" />
 					<Add library="sfml-network-d" />
+					<Add library="sfml-system-d" />
 				</Linker>
 			</Target>
 			<Target title="Release">
@@ -46,6 +46,17 @@
 				</Environment>
 			</Target>
 		</Build>
+		<Compiler>
+			<Add directory="D:/SFML-3.0.0/include" />
+		</Compiler>
+		<Linker>
+			<Add library="sfml-graphics" />
+			<Add library="sfml-audio" />
+			<Add library="sfml-window" />
+			<Add library="sfml-network" />
+			<Add library="sfml-system" />
+			<Add directory="D:/SFML-3.0.0/lib" />
+		</Linker>
 		<Unit filename="main.cpp" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
