--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "cmake.sourceDirectory": "/Users/greenbox/Documents/GitHub/Prosaic-at-best/Fighting game thing"
+    "cmake.sourceDirectory": "/Users/greenbox/Documents/GitHub/Prosaic-at-best"
 }
