meter retainment through rounds

--- a/.gitignore
+++ b/.gitignore
@@ -823,3 +823,14 @@ build/.cmake/api/v1/reply/cmakeFiles-v1-6045acf952e9bdc0d122.json
 build/.cmake/api/v1/reply/index-2025-01-31T01-52-54-0087.json
 build/bin/main.cpp
 .DS_Store
+build/.cmake/api/v1/reply/index-2025-01-31T04-49-36-0317.json
+build/_deps/flac-src
+build/_deps/freetype-src
+build/_deps/ogg-src
+build/_deps/vorbis-src
+build/_deps/flac-src
+build/_deps/freetype-src
+build/_deps/ogg-src
+build/_deps/vorbis-src
+build/_deps/flac-src
+build/_deps/ogg-src
