Sinclair super change

--- a/.gitignore
+++ b/.gitignore
@@ -834,3 +834,4 @@ build/_deps/ogg-src
 build/_deps/vorbis-src
 build/_deps/flac-src
 build/_deps/ogg-src
+build/.cmake/api/v1/reply/index-2025-02-01T07-25-36-0909.json
