online ip input thing

--- a/.gitignore
+++ b/.gitignore
@@ -835,3 +835,11 @@ build/_deps/vorbis-src
 build/_deps/flac-src
 build/_deps/ogg-src
 build/.cmake/api/v1/reply/index-2025-02-01T07-25-36-0909.json
+build/.cmake/api/v1/reply/codemodel-v2-6a1f94055f9ee8506271.json
+build/.cmake/api/v1/reply/index-2025-02-02T11-42-27-0904.json
+build/.cmake/api/v1/reply/target-main-Debug-03f233b27e58387cc528.json
+build/.cmake/api/v1/reply/target-sfml-audio-Debug-1443bbdde94c2d358700.json
+build/.cmake/api/v1/reply/target-sfml-graphics-Debug-17cc6b463d3f7a861fc4.json
+build/.cmake/api/v1/reply/codemodel-v2-1ba0d9ea5105d5a60ad4.json
+build/.cmake/api/v1/reply/index-2025-02-02T12-58-44-0862.json
+build/.cmake/api/v1/reply/target-main-Debug-7826753897ed48bd1bf2.json
