--- a/.gitignore
+++ b/.gitignore
@@ -843,3 +843,4 @@ build/.cmake/api/v1/reply/target-sfml-graphics-Debug-17cc6b463d3f7a861fc4.json
 build/.cmake/api/v1/reply/codemodel-v2-1ba0d9ea5105d5a60ad4.json
 build/.cmake/api/v1/reply/index-2025-02-02T12-58-44-0862.json
 build/.cmake/api/v1/reply/target-main-Debug-7826753897ed48bd1bf2.json
+build/.cmake/api/v1/reply/index-2025-02-03T02-00-23-0451.json
