unblocked sockets and stuff

--- a/.gitignore
+++ b/.gitignore
@@ -844,3 +844,24 @@ build/.cmake/api/v1/reply/codemodel-v2-1ba0d9ea5105d5a60ad4.json
 build/.cmake/api/v1/reply/index-2025-02-02T12-58-44-0862.json
 build/.cmake/api/v1/reply/target-main-Debug-7826753897ed48bd1bf2.json
 build/.cmake/api/v1/reply/index-2025-02-03T02-00-23-0451.json
+build/.cmake/api/v1/reply/index-2025-02-04T06-15-19-0910.json
+build/.cmake/api/v1/reply/codemodel-v2-bd76bfd0dc463e8da78b.json
+build/.cmake/api/v1/reply/directory-_deps.freetype-build-Debug-29b14028ede1b37940e1.json
+build/.cmake/api/v1/reply/index-2025-02-04T07-44-11-0210.json
+build/.cmake/api/v1/reply/target-Prosaic_at_best-Debug-a495c536c402a8df5280.json
+build/CMakeFiles/Prosaic_at_best.dir/build.make
+build/CMakeFiles/Prosaic_at_best.dir/cmake_clean.cmake
+build/CMakeFiles/Prosaic_at_best.dir/compiler_depend.internal
+build/CMakeFiles/Prosaic_at_best.dir/compiler_depend.make
+build/CMakeFiles/Prosaic_at_best.dir/compiler_depend.ts
+build/CMakeFiles/Prosaic_at_best.dir/depend.make
+build/CMakeFiles/Prosaic_at_best.dir/DependInfo.cmake
+build/CMakeFiles/Prosaic_at_best.dir/flags.make
+build/CMakeFiles/Prosaic_at_best.dir/link.txt
+build/CMakeFiles/Prosaic_at_best.dir/progress.make
+build/CMakeFiles/Prosaic_at_best.dir/src/main.cpp.o
+build/CMakeFiles/Prosaic_at_best.dir/src/main.cpp.o.d
+build/bin/Prosaic_at_best
+build/.cmake/api/v1/reply/codemodel-v2-f298cb0bf0613ffd49d9.json
+build/.cmake/api/v1/reply/index-2025-02-04T08-05-06-0023.json
+build/.cmake/api/v1/reply/target-sfml-audio-Debug-7345b2be64398854fac0.json
