online left right fixed

--- a/.gitignore
+++ b/.gitignore
@@ -865,3 +865,5 @@ build/bin/Prosaic_at_best
 build/.cmake/api/v1/reply/codemodel-v2-f298cb0bf0613ffd49d9.json
 build/.cmake/api/v1/reply/index-2025-02-04T08-05-06-0023.json
 build/.cmake/api/v1/reply/target-sfml-audio-Debug-7345b2be64398854fac0.json
+build/.cmake/api/v1/reply/cache-v2-1911448145272cfb5a83.json
+/build
