--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,13 @@ FetchContent_Declare(SFML
     SYSTEM)
 FetchContent_MakeAvailable(SFML)
 
-add_executable(Prosaic_at_best src/main.cpp)
+if (WIN32)
+    add_library(myLib SHARED ${SOURCE_FILES})
+    set(CMAKE_EXE_LINKER_FLAGS " -static")
+    target_link_libraries(myLib -static-libgcc -static-libstdc++)
+    add_executable(Prosaic_at_best WIN32 src/main.cpp)
+else()
+    add_executable(Prosaic_at_best src/main.cpp)
+endif ()
 target_compile_features(Prosaic_at_best PRIVATE cxx_std_17)
 target_link_libraries(Prosaic_at_best PRIVATE SFML::Graphics SFML::Network SFML::Audio)
